--- a/style.css
+++ b/style.css
@@ -347,4 +347,16 @@ body{
       color: darkslateblue;
   }
 
+ .gameLink{
+   font-size: 20px;
+   font-weight: bold;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   text-align: center;
+   text-decoration: none;
+  color: #255784;
+  background: #2196f3;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+  transition-delay: 0.20s;
+  -webkit-transition-delay: 100ms;
+ }
   /*My css completed here*/
